--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>net.skeagle</groupId>
     <artifactId>beta_additions</artifactId>
-    <version>1.6a</version>
+    <version>1.6b</version>
     <packaging>jar</packaging>
 
     <name>Beta Additions</name>
